# endesive

./: .gitignore  .travis.yml  LICENSE  LICENSE.pdf-annotate  MANIFEST.in  Makefile  README.rst  changelog.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  x-tests.sh
.circleci/: config.yml
docs/: conf.py  endesive.email.rst  endesive.pdf.PyPDF2.rst  endesive.pdf.PyPDF2_annotate.annotations.rst  endesive.pdf.PyPDF2_annotate.config.rst  endesive.pdf.PyPDF2_annotate.fonts.rst  endesive.pdf.PyPDF2_annotate.rst  endesive.pdf.PyPDF2_annotate.util.rst  endesive.pdf.fpdf.rst  endesive.pdf.rst  endesive.plain.rst  endesive.rst  endesive.xades.rst  index.rst  modules.rst
endesive/: __init__.py  hsm.py  signer.py  verifier.py
endesive/email/: __init__.py  decrypt.py  encrypt.py  sign.py  verify.py
endesive/pdf/: cms.py  (+5 more)
examples/: .gitignore  CMSProcessableInputStream.java  CreateSignature.java  CreateSignatureBase.java  PDFAnnot.java  PDFEncrypt.java  PDFShowSignature.java  PDFSign.java  PDFValidate.java  SigUtils.java  ca-actalis-cag1.pem  ca-certum.pem  cert-hsm-ca.pem  cert-hsm-user1.pem  cert-info-hsm.py  cert-info-p12.py  cert-info-pem.py  cert-info.py  cert-install  cert-make-hsm.py  cert-make.py  certum.py  csmimersaca.cer  csmimersaca.cer.pem  demo2_ca.crt.pem  demo2_ca.key.pem  demo2_user1.crt.pem  demo2_user1.key.pem  demo2_user1.p12  demo2_user1.pub.pem  demo2_user2.crt.pem  demo2_user2.key.pem  demo2_user2.p12  demo2_user2.pub.pem  dumppdf.py  hsm  hsm-pkcs  j-cc  j-java  java-annot  (+104 more)
tests/: endesive  run_tests.py  test_cert.py  test_email.py  test_hsm.py  test_pdf.py  test_plain.py
(+93 files in other folders)
